2003-12-23  Daniel Macks <dmacks@netspace.org>


        * PkgVersion.pm: Support %lV and %lv as raw and punctionation-free
	values of Type version string (if provided).
	* Package.pm: Support %lv in Package.
	* Validation.pm: Allow %lv in Package (for info filename check).
	
2003-12-23  Daniel Macks <dmacks@netspace.org>

        * Validation.pm: Added support for Type java (version mandatory).

2003-12-22  Daniel Macks <dmacks@netspace.org>

        * Validation.pm: Added support for Type python, guile, ruby
        (version optional, except mandatory for python).

2003-12-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: move inject.pl code into Bootstrap.pm, and
	separate out the common code from inject.pl and bootstrap.pl
	into subroutines that can be used by both

2003-12-22  Daniel Macks <dmacks@netspace.org>

	* Validation.pm: All patch file tests now also applied to files
	used in PatchScript. Hardcoded /sw test fixed to skip diff
	context- and being-replaced lines.

2003-12-22  Daniel Macks <dmacks@netspace.org>

	* Validation.pm: Was only checking first line of .patch. Fixed.

2003-12-22  Daniel Macks <dmacks@netspace.org>

	* Validation.pm: Check for hardcoded /sw in patch file (as loaded
	by Patch, not as by PatchScript).

2003-12-21  Daniel Macks <dmacks@netspace.org>

	* Services.pm: Gave prompt_selection_new more flexible default-
	choice behavior. Not gonna change API any more so okay to use.

2003-12-19  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Detect Java3D and Java Advanced Imaging

2003-12-19  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: Recognize darwin 7.2.0.

2003-12-19  Daniel Macks <dmacks@netspace.org>

	* PkgVersion,Validation.pm: Support for "Source: none" as synonym
	for "Type: NoSource".

2003-12-19  Daniel Macks <dmacks@netspace.org>

	* Validation.pm: Added error if there is a source or MD5 for type
	Bundle.

2003-12-19  Daniel Macks <dmacks@netspace.org>
